@@ -8,6 +8,7 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
       struct pcap: Update buffer type from "void *" to "u_char *".
       Remove dead code that supported SITA ACN devices.
       Remove the TODO file.
+      Merge four header files into gencode.c.
     Link-layer types:
       Add LINKTYPE_ETW/DLT_ETW.
       Add LINKTYPE_NETANALYZER_NG/DLT_NETANALYZER_NG (pull request
